updated link note

--- a/171_countries_study.Rmd
+++ b/171_countries_study.Rmd
@@ -9,11 +9,12 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-*One note before: To see links and be able to follow them, please open the original .Rmd file.*
+*One note before reading: To see links and be able to follow them, either open this file in an external pdf viewer or open the original .Rmd file.*
 
 ## Introductory words
 
-This script leads through a very short analysis, I performed for a small side project I'm currently involved in. This side project deals with the current understanding of the role of cholesterol (and diet) on the risk of cardiovascular diseases. As it turned out, still many involved people cite the classic study of Ancel Keys, which is based on data on diet and health from men from seven countries, collected in the 1960s. [Published](https://www.cabdirect.org/cabdirect/abstract/19711403775) in 1970, this analysis was the foundation for the currently still prevalent idea of 'bad' cholesterol. From the information I have sighted so far, I start to doubt that there is much scientific merit in the cholesterol hypothesis (very interesting publications can be found e.g. [here](http://www.egms.de/static/en/journals/gms/2007-5/000040.shtml), [here](http://www.mdpi.com/2072-6643/7/10/5429) and [here](http://www.scirp.org/journal/PaperInformation.aspx?PaperID=34065) ). And never to forget [this](http://journals.plos.org/plosmedicine/article?id=10.1371/journal.pmed.0020124).
+This script leads through a very short analysis, I performed for a small side project I'm currently involved in. This side project deals with the current understanding of the role of cholesterol (and diet) on the risk of cardiovascular diseases. As it turned out, still many involved people cite the classic study of Ancel Keys, which is based on data on diet and health from men from seven countries, collected in the 1960s.
+Published in 1970, this analysis was the foundation for the currently still prevalent idea of 'bad' cholesterol. From the information I have sighted so far, I start to doubt that there is much scientific merit in the cholesterol hypothesis (very interesting publications can be found e.g. [here](http://www.egms.de/static/en/journals/gms/2007-5/000040.shtml), [here](http://www.mdpi.com/2072-6643/7/10/5429) and [here](http://www.scirp.org/journal/PaperInformation.aspx?PaperID=34065) ). And never to forget [this](http://journals.plos.org/plosmedicine/article?id=10.1371/journal.pmed.0020124).
 
 When reading about the original study I saw that Keys necessarily was confronted with rescrictions regarding sample size and data quality. Amongst other problems, he could for example not directly measure the serum cholesterol levels. So my idea was to gather more data of better quality and repeat this simple regression - the result can be found below for the year 2000. It is very important to note that this document / repo does not aim at being a scientific publication. I will not dive into deep interpretations, comparisons or an answer on the cholesterol question - this can simply not be done with this analysis. Yet, it might just be interesting to show, how easily we can target questions in these days of improved data availability. 
 
